--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"core-js": "^2.6.5",
+		"mongoose": "^5.5.6",
 		"morgan": "^1.9.1",
 		"vue": "^2.6.10",
 		"vue-router": "^3.0.3",
