--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-	"name": "sandbox",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"start-dev": "nodemon --exec npm run serve",
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
-	},
-	"dependencies": {
-		"axios": "^0.18.0",
-		"core-js": "^2.6.5",
-		"mongoose": "^5.5.6",
-		"morgan": "^1.9.1",
-		"vue": "^2.6.10",
-		"vue-router": "^3.0.3",
-		"vuex": "^3.0.1"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.7.0",
-		"@vue/cli-plugin-eslint": "^3.7.0",
-		"@vue/cli-service": "^3.7.0",
-		"babel-eslint": "^10.0.1",
-		"eslint": "^5.16.0",
-		"eslint-plugin-vue": "^5.0.0",
-		"node-sass": "^4.9.0",
-		"sass-loader": "^7.1.0",
-		"vue-template-compiler": "^2.5.21"
-	}
+  "name": "sandbox",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start-dev": "nodemon --exec vue-cli-service serve",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "core-js": "^2.6.5",
+    "mongoose": "^5.5.6",
+    "morgan": "^1.9.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3",
+    "vuetify": "^1.5.5",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@mdi/font": "^3.6.95",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
+  }
 }
