--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "heroku-postbuild": "npm run build | npm run server"
+    "heroku-postbuild": "npm run build && npm run server"
   },
   "dependencies": {
     "axios": "^0.18.0",
