--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "npm run server"
+    "heroku-postbuild": "npm run server"
   },
   "dependencies": {
     "axios": "^0.18.0",
