--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
+    "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.6",
     "morgan": "^1.9.1",
